@@ -7,7 +7,10 @@ plugins {
 
 application {mainClass = 'App'}
 
-compileJava {  options.release = 17}
+compileJava {
+    options.release = 17
+    options.compilerArgs += ['--enable-preview']
+}
 
 run {  standardInput = System.in }
 
